# learn-agent

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: 2026-06-12-subagent.md  2026-06-15-skills.md  2026-06-20-L1_L2_compaction.md  2026-06-21-hooks.md
src/learn_agent/: agent_config.py  agent_loop.py  compaction.py  hook_system.py  loop_state.py  main.py  skill_registry.py
src/learn_agent.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/learn_agent/config/: settings.py
src/learn_agent/hooks/: compaction.py  skills.py
src/learn_agent/tools/: __init__.py  register_tools.py  run_bash.py  run_create_plan.py  run_delegate_task.py  run_edit.py  run_glob.py  run_load_skill.py  run_read.py  run_update_plan_status.py  run_write.py
src/learn_agent/utils/: extract_text.py  normalize_messages.py  safe_path.py
tests/: conftest.py  test_agent_config.py  test_agent_loop.py  test_delegate_task.py  test_extract_text.py  test_hook_system.py  test_load_skill.py  test_loop_state.py  test_normalize_messages.py  test_plan_system.py  test_safe_path.py  test_safety_and_limits.py  test_skill_registry.py
tests/test_tools/: test_run_bash.py  test_run_edit.py  test_run_glob.py  test_run_read.py  test_run_write.py
