[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "learn-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.41.0",
    "pydantic-settings>=2.11.0",
    "python-dotenv>=1.2.1",
]
